<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/displayContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#EEE"
        android:padding="16dp"
        app:layout_constraintHeight_percent="0.33"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/inputDisplay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:gravity="end"
            android:maxLines="2"
            android:ellipsize="start"
            android:text=""
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/resultDisplay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/resultDisplay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="44sp"
            android:textStyle="bold"
            android:gravity="end"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#888888"
        app:layout_constraintTop_toBottomOf="@+id/displayContainer"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonGrid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/displayContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!--Row 1-->
        <Button
            style="@style/calcButton"
            android:id="@+id/C"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/C"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/seven"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toLeftOf="@id/percent"/>
        <Button
            style="@style/calcButton"
            android:id="@+id/percent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/percent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/eight"
            app:layout_constraintLeft_toRightOf="@id/C"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toLeftOf="@id/cancel"/>
        <Button
            style="@style/calcButton"
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/cancel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/nine"
            app:layout_constraintLeft_toRightOf="@id/percent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toLeftOf="@id/divide"/>
        <Button
            style="@style/calcButton"
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/divide"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/multiply"
            app:layout_constraintLeft_toRightOf="@id/cancel"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toRightOf="parent"
            />
        <!--    Row 2-->
        <Button
            style="@style/calcButton"
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/seven"
            app:layout_constraintTop_toBottomOf="@id/C"
            app:layout_constraintBottom_toTopOf="@id/four"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toLeftOf="@id/eight"/>
        <Button
            style="@style/calcButton"
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/eight"
            app:layout_constraintTop_toBottomOf="@id/percent"
            app:layout_constraintBottom_toTopOf="@id/five"
            app:layout_constraintLeft_toRightOf="@id/seven"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toLeftOf="@id/nine"/>

        <Button
            android:id="@+id/nine"
            style="@style/calcButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/nine"
            app:layout_constraintBottom_toTopOf="@id/six"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toRightOf="@id/eight"
            app:layout_constraintRight_toLeftOf="@id/multiply"
            app:layout_constraintTop_toBottomOf="@id/cancel" />

        <Button
            style="@style/calcButton"
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/multiply"
            app:layout_constraintTop_toBottomOf="@id/divide"
            app:layout_constraintBottom_toTopOf="@id/minus"
            app:layout_constraintLeft_toRightOf="@id/nine"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toRightOf="parent"
            />
        <!--    Row 3-->
        <Button
            style="@style/calcButton"
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/four"
            app:layout_constraintTop_toBottomOf="@id/seven"
            app:layout_constraintBottom_toTopOf="@id/one"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toLeftOf="@id/five"/>
        <Button
            style="@style/calcButton"
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/five"
            app:layout_constraintTop_toBottomOf="@id/eight"
            app:layout_constraintBottom_toTopOf="@id/two"
            app:layout_constraintLeft_toRightOf="@id/four"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toLeftOf="@id/six"/>
        <Button
            style="@style/calcButton"
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/six"
            app:layout_constraintTop_toBottomOf="@id/nine"
            app:layout_constraintBottom_toTopOf="@id/three"
            app:layout_constraintLeft_toRightOf="@id/five"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toLeftOf="@id/minus"/>
        <Button
            style="@style/calcButton"
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/minus"
            app:layout_constraintTop_toBottomOf="@id/multiply"
            app:layout_constraintBottom_toTopOf="@id/plus"
            app:layout_constraintLeft_toRightOf="@id/six"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toRightOf="parent"
            />
        <!--    Row 4-->
        <Button
            style="@style/calcButton"
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/one"
            app:layout_constraintTop_toBottomOf="@id/four"
            app:layout_constraintBottom_toTopOf="@id/doubleZero"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toLeftOf="@id/two"/>
        <Button
            style="@style/calcButton"
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/two"
            app:layout_constraintTop_toBottomOf="@id/five"
            app:layout_constraintBottom_toTopOf="@id/zero"
            app:layout_constraintLeft_toRightOf="@id/one"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toLeftOf="@id/three"/>
        <Button
            style="@style/calcButton"
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/three"
            app:layout_constraintTop_toBottomOf="@+id/six"
            app:layout_constraintBottom_toTopOf="@id/dot"
            app:layout_constraintLeft_toRightOf="@id/two"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toLeftOf="@id/plus"/>
        <Button
            style="@style/calcButton"
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/plus"
            app:layout_constraintTop_toBottomOf="@id/minus"
            app:layout_constraintBottom_toTopOf="@id/equals"
            app:layout_constraintLeft_toRightOf="@id/three"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toRightOf="parent"
            />
        <!--    Row 5-->
        <Button
            style="@style/calcButton"
            android:id="@+id/doubleZero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/doubleZero"
            app:layout_constraintTop_toBottomOf="@id/one"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toLeftOf="@id/zero"/>
        <Button
            style="@style/calcButton"
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/zero"
            app:layout_constraintTop_toBottomOf="@id/two"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/doubleZero"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toLeftOf="@id/dot"/>
        <Button
            style="@style/calcButton"
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/dot"
            app:layout_constraintTop_toBottomOf="@id/three"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/zero"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toLeftOf="@id/equals"/>
        <Button
            style="@style/calcButton"
            android:id="@+id/equals"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/equals"
            app:layout_constraintTop_toBottomOf="@id/plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/dot"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toRightOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>